--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,3 @@
-[package]
-name = "elden-ring"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-anyhow = "1.0.86"
-byteorder = "1.5.0"
-hex = "0.4.3"
-md-5 = "0.10.6"
+[workspace]
+members = ["crates/ER-Save-Editor", "crates/main"]
+resolver = "2"
