--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["crates/ER-Save-Editor", "crates/main"]
+members = ["crates/ER-Save-Editor", "crates/main", "crates/er-save", "crates/er-save-vm"]
 resolver = "2"
