--- a/crates/tauri-app/package.json
+++ b/crates/tauri-app/package.json
@@ -10,15 +10,18 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "vue": "^3.3.4",
     "@tauri-apps/api": ">=2.0.0-rc.0",
-    "@tauri-apps/plugin-shell": ">=2.0.0-rc.0"
+    "@tauri-apps/plugin-shell": ">=2.0.0-rc.0",
+    "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@tauri-apps/cli": ">=2.0.0-rc.0",
     "@vitejs/plugin-vue": "^5.0.5",
+    "@vitejs/plugin-vue-jsx": "^4.0.1",
     "typescript": "^5.2.2",
+    "unocss": "^0.62.3",
     "vite": "^5.3.1",
-    "vue-tsc": "^2.0.22",
-    "@tauri-apps/cli": ">=2.0.0-rc.0"
+    "vite-plugin-vue-devtools": "^7.3.9",
+    "vue-tsc": "^2.0.22"
   }
 }
