--- a/crates/tauri-app/src-tauri/Cargo.toml
+++ b/crates/tauri-app/src-tauri/Cargo.toml
@@ -19,4 +19,6 @@ tauri = { version = "2.0.0-rc", features = [] }
 tauri-plugin-shell = "2.0.0-rc"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+toml = "0.8.19"
 
+er-save-lib = { path = "../../ER-Save-Lib" }
