--- a/crates/tauri-app/src-tauri/Cargo.toml
+++ b/crates/tauri-app/src-tauri/Cargo.toml
@@ -15,10 +15,11 @@ crate-type = ["lib", "cdylib", "staticlib"]
 tauri-build = { version = "2.0.0-rc", features = [] }
 
 [dependencies]
+er-save-lib = { path = "../../ER-Save-Lib" }
+
+anyhow = "1.0.88"
 tauri = { version = "2.0.0-rc", features = [] }
 tauri-plugin-shell = "2.0.0-rc"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 toml = "0.8.19"
-
-er-save-lib = { path = "../../ER-Save-Lib" }
