--- a/crates/tauri-app/package.json
+++ b/crates/tauri-app/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@tauri-apps/api": ">=2.0.0-rc.0",
     "@tauri-apps/plugin-shell": ">=2.0.0-rc.0",
+    "pinia": "^2.2.2",
+    "timeago.js": "^4.0.2",
     "vue": "^3.3.4"
   },
   "devDependencies": {
