--- a/crates/tauri-app/package.json
+++ b/crates/tauri-app/package.json
@@ -14,7 +14,8 @@
     "@tauri-apps/plugin-shell": ">=2.0.0-rc.0",
     "pinia": "^2.2.2",
     "timeago.js": "^4.0.2",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-i18n": "^10.0.1"
   },
   "devDependencies": {
     "@tauri-apps/cli": ">=2.0.0-rc.0",
