--- a/crates/tauri-app/src-tauri/Cargo.toml
+++ b/crates/tauri-app/src-tauri/Cargo.toml
@@ -23,3 +23,5 @@ tauri-plugin-shell = "2.0.0-rc"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 toml = "0.8.19"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
