--- a/crates/tauri-app/src-tauri/Cargo.toml
+++ b/crates/tauri-app/src-tauri/Cargo.toml
@@ -18,6 +18,7 @@ tauri-build = { version = "2.0.0-rc", features = [] }
 er-save-lib = { path = "../../ER-Save-Lib" }
 
 anyhow = "1.0.88"
+lazy_static = "1.5.0"
 tauri = { version = "2.0.0-rc", features = [] }
 tauri-plugin-shell = "2.0.0-rc"
 serde = { version = "1", features = ["derive"] }
@@ -25,3 +26,5 @@ serde_json = "1"
 toml = "0.8.19"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+polars = { version = "0.43.1", features = ["dtype-u8", "lazy", "round_series"] }
+polars-plan = "0.43.1"
