--- a/pixi.toml
+++ b/pixi.toml
@@ -11,6 +11,10 @@ platforms = ["linux-64"]
 [dependencies]
 python = ">=3.12.5,<3.13"
 pydantic = ">=1.8,<2" # this is required since erdb require <2
+ipykernel = ">=6.29.5,<6.30"
+pandas = ">=2.2.2,<3"
+pyarrow = ">=17.0.0,<18"
+polars = ">=1.7.1,<2"
 
 [pypi-dependencies]
 erdb = "*"
