--- a/crates/tauri-app/src-tauri/Cargo.toml
+++ b/crates/tauri-app/src-tauri/Cargo.toml
@@ -25,6 +25,4 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 toml = "0.8.19"
 tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
-polars = { version = "0.43.1", features = ["dtype-u8", "lazy", "round_series"] }
-polars-plan = "0.43.1"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
