--- a/pixi.toml
+++ b/pixi.toml
@@ -16,6 +16,7 @@ pandas = ">=2.2.2,<3"
 pyarrow = ">=17.0.0,<18"
 polars = ">=1.7.1,<2"
 pythonnet = ">=3.0.3,<4"
+tqdm = ">=4.66.5,<5"
 
 [pypi-dependencies]
 erdb = "*"
