--- a/pixi.toml
+++ b/pixi.toml
@@ -9,14 +9,11 @@ platforms = ["linux-64"]
 [tasks]
 
 [dependencies]
-python = ">=3.12.5,<3.13"
-pydantic = ">=1.8,<2" # this is required since erdb require <2
-ipykernel = ">=6.29.5,<6.30"
-pandas = ">=2.2.2,<3"
-pyarrow = ">=17.0.0,<18"
-polars = ">=1.7.1,<2"
-pythonnet = ">=3.0.3,<4"
-tqdm = ">=4.66.5,<5"
-
-[pypi-dependencies]
-erdb = "*"
+python = "~=3.12.5"
+ipykernel = "~=6.29"
+pandas = "~=2.2"
+pyarrow = "~=17.0"
+polars = "~=1.7"
+pythonnet = "~=3.0"
+tqdm = "~=4"
+streamlit = "~=1.38"
