--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "python.analysis.extraPaths": [
-    "./scripts"
+    "./scripts",
+    "./scripts/typings"
   ],
   "jupyter.notebookFileRoot": "${workspaceFolder}"
 }
