--- a/pixi.toml
+++ b/pixi.toml
@@ -8,11 +8,11 @@ platforms = ["linux-64", "osx-arm64", "win-64"]
 
 [tasks]
 init = { depends_on = ["init-git", "build-dotnet", "init-clr-typings", "init-tauri"] }
-init-git = "git submodule update --init --recursive && sed 's|${PWD}|'$(pwd)'|g' python.env.in | tee python.env && python scripts/patch.py"
+init-git = "git submodule update --init --recursive && sed 's|${PWD}|'$(pwd)'|g' python.env.in | tee python.env && python scripts/00-a-patch.py"
 init-tauri = "yarn --cwd tauri-app install && python scripts/test.py"
 # this only need in non-windows
-init-oodle = "bash scripts/init_oodle.sh"
-init-clr-typings = { cmd = "dotnet publish vendor/pythonnet-stub-generator/csharp/PythonNetStubGenerator && python scripts/gen_typings.py", depends_on = ["build-dotnet"] }
+init-oodle = "bash scripts/00-c-init_oodle.sh"
+init-clr-typings = { cmd = "dotnet publish vendor/pythonnet-stub-generator/csharp/PythonNetStubGenerator && python scripts/00-b-gen_typings.py", depends_on = ["build-dotnet"] }
 build-dotnet = "dotnet build"
 unpack = { cmd = "python scripts/unpack.py", depends_on = ["build-dotnet"] }
 dev-tauri = "yarn --cwd tauri-app tauri dev"
@@ -27,3 +27,6 @@ pythonnet = "~=3.0"
 tqdm = "~=4"
 streamlit = "~=1.38"
 cmake = ">=3.30.3,<4"
+
+[pypi-dependencies]
+polars-distance = ">=0.4.3, <0.5"
