--- a/config.example.toml
+++ b/config.example.toml
@@ -1,7 +1,7 @@
 [unpack]
 src_dir = "D:/Steam/steamapps/common/ELDEN RING/Game"
 stage1_dir = "D:/tmp/ER"
-#stage2_dir = "D:/tmp/ER2"
+stage2_dir = "D:/tmp/ER2"
 
 [helper]
 file = "C:/Users/user/AppData/Roaming/EldenRing/steam_id/ER0000.sl2"
