--- a/pixi.toml
+++ b/pixi.toml
@@ -13,9 +13,10 @@ init-tauri = "yarn --cwd tauri-app install && python scripts/test.py"
 # this only need in non-windows
 init-oodle = "bash scripts/00-c-init_oodle.sh"
 init-clr-typings = { cmd = "dotnet publish vendor/pythonnet-stub-generator/csharp/PythonNetStubGenerator && python scripts/00-b-gen_typings.py", depends_on = ["build-dotnet"] }
-build-dotnet = "dotnet build"
+build-dotnet = "dotnet build && dotnet publish libs/UnpackHelper"
 unpack = { cmd = "python scripts/unpack.py", depends_on = ["build-dotnet"] }
 dev-tauri = "yarn --cwd tauri-app tauri dev"
+clean-dotnet = "rm -rf libs/UnpackHelper/bin libs/UnpackHelper/obj vendor/SoulsFormatsNEXT/SoulsFormats/bin vendor/SoulsFormatsNEXT/SoulsFormats/obj vendor/WitchyBND/StudioUtils/bin vendor/WitchyBND/StudioUtils/obj vendor/WitchyBND/WitchyFormats/bin vendor/WitchyBND/WitchyFormats/obj"
 
 [dependencies]
 python = "~=3.12.5"
