add cache in tauri

--- a/tauri-app/src-tauri/Cargo.toml
+++ b/tauri-app/src-tauri/Cargo.toml
@@ -27,3 +27,5 @@ toml = "0.8.19"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 base64 = "0.22.1"
+reqwest = { version = "0.12.8", features = ["blocking"] }
+dashmap = "6.1.0"
