--- a/tauri-app/package.json
+++ b/tauri-app/package.json
@@ -18,6 +18,7 @@
     "vue-i18n": "^10.0.1"
   },
   "devDependencies": {
+    "@modyfi/vite-plugin-yaml": "^1.1.0",
     "@tauri-apps/cli": ">=2.0.0-rc.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
