--- a/tauri-app/src-tauri/Cargo.toml
+++ b/tauri-app/src-tauri/Cargo.toml
@@ -12,15 +12,15 @@ name = "tauri_app_lib"
 crate-type = ["lib", "cdylib", "staticlib"]
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-rc", features = [] }
+tauri-build = { version = "2.0", features = [] }
 
 [dependencies]
 er-save-lib = { path = "../../libs/ER-Save-Lib" }
 
 anyhow = "1.0.88"
 lazy_static = "1.5.0"
-tauri = { version = "2.0.0-rc", features = [] }
-tauri-plugin-shell = "2.0.0-rc"
+tauri = { version = "2.0", features = [] }
+tauri-plugin-shell = "2.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 toml = "0.8.19"
@@ -29,3 +29,6 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 base64 = "0.22.1"
 reqwest = { version = "0.12.8", features = ["blocking"] }
 dashmap = "6.1.0"
+specta-typescript = "0.0.7"
+tauri-specta = { version = "2.0.0-rc.20", features = ["derive", "typescript"] }
+specta = "2.0.0-rc.20"
